package com.directi.training.ocp.exercise.sol;

public class SpaceSlotResource extends Resource{
    
    public void markSlotFree(){

    };

    public void markSlotBusy(){

    };

    public int findFreeSlot(){
        return 0;
    };

}
